force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>案件</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>