force-app/main/default/objects/Project__c/fields/AccountEdit__c.field-meta.xml
<CustomField>
    <fullName>AccountEdit__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e?cancelURL=%2F00O0l000000WsUeEAK/view&quot;&amp;&quot;?savelURL=%2F00O0l000000WsUeEAK/view&quot;, &quot;編集&quot; )</formula>
    <label>編集</label>
    <type>Text</type>
</CustomField>