force-app/main/default/objects/Project__c/fields/AccountText__c.field-meta.xml
<CustomField>
    <fullName>AccountText__c</fullName>
    <label>企業(直接入力)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>