force-app/main/default/objects/Project__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>取引先種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>法人</fullName>
            </value>
            <value>
                <fullName>アカデミック</fullName>
            </value>
            <value>
                <fullName>個人</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>