force-app/main/default/objects/Project__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>活動</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipLabel>案件</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>