force-app/main/default/objects/Project__c/fields/AgentAccount__c.field-meta.xml
<CustomField>
    <fullName>AgentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店社名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AD案件 (代理店社名)</relationshipLabel>
    <relationshipName>ADAgentAccount</relationshipName>
    <type>Lookup</type>
</CustomField>