force-app/main/default/objects/Project__c/fields/AgentContact__c.field-meta.xml
<CustomField>
    <fullName>AgentContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店担当者</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AgentAccount__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AD案件 (代理店担当者)</relationshipLabel>
    <relationshipName>ADAgentContact</relationshipName>
    <type>Lookup</type>
</CustomField>