force-app/main/default/objects/Project__c/fields/AgentDepartment__c.field-meta.xml
<CustomField>
    <fullName>AgentDepartment__c</fullName>
    <formula>Contact__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>部署</label>
    <type>Text</type>
</CustomField>