force-app/main/default/objects/Project__c/fields/BillingStartDateDB__c.field-meta.xml
<CustomField>
    <fullName>BillingStartDateDB__c</fullName>
    <label>課金開始日</label>
    <type>Date</type>
</CustomField>