force-app/main/default/objects/Project__c/fields/CancellationDateDB__c.field-meta.xml
<CustomField>
    <fullName>CancellationDateDB__c</fullName>
    <label>解約日</label>
    <type>Date</type>
</CustomField>