force-app/main/default/objects/Project__c/fields/Contact2__c.field-meta.xml
<CustomField>
    <fullName>Contact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業担当者2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>案件 (企業担当者2)</relationshipLabel>
    <relationshipName>Project_Contact2</relationshipName>
    <type>Lookup</type>
</CustomField>