force-app/main/default/objects/Project__c/fields/Contact2Text__c.field-meta.xml
<CustomField>
    <fullName>Contact2Text__c</fullName>
    <label>企業担当者2(直接入力)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>