force-app/main/default/objects/Project__c/fields/Contact3__c.field-meta.xml
<CustomField>
    <fullName>Contact3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業担当者3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>案件 (企業担当者3)</relationshipLabel>
    <relationshipName>Project_Contact3</relationshipName>
    <type>Lookup</type>
</CustomField>