force-app/main/default/objects/Project__c/fields/Contact3Text__c.field-meta.xml
<CustomField>
    <fullName>Contact3Text__c</fullName>
    <label>企業担当者3(直接入力)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>