force-app/main/default/objects/Project__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <formula>Contact__r.LastName + &#39; &#39; +Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>企業担当者名</label>
    <type>Text</type>
</CustomField>