force-app/main/default/objects/Project__c/fields/ContactNameCheck__c.field-meta.xml
<CustomField>
    <fullName>ContactNameCheck__c</fullName>
    <formula>IF(AND ( NOT(ISBLANK(ContactText__c)) ,ISBLANK( Contact__c ) ) , TRUE , FALSE )</formula>
    <label>仮入力状態(企業担当者名)</label>
    <type>Checkbox</type>
</CustomField>