force-app/main/default/objects/Project__c/fields/ContactNameDB__c.field-meta.xml
<CustomField>
    <fullName>ContactNameDB__c</fullName>
    <formula>IF ( ISBLANK(  Contact__c  ) ,  ContactText__c  ,  Contact__r.LastName &amp;&quot; &quot;&amp;  Contact__r.FirstName    )</formula>
    <label>企業担当者名(DB用)</label>
    <type>Text</type>
</CustomField>