force-app/main/default/objects/Project__c/fields/CorrectionAmountDB__c.field-meta.xml
<CustomField>
    <fullName>CorrectionAmountDB__c</fullName>
    <formula>ROUND(ProposedAmount__c * RateOfAmount_DB__c , 1)</formula>
    <label>補正金額（万円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>