force-app/main/default/objects/Project__c/fields/DataProductFamily__c.field-meta.xml
<CustomField>
    <fullName>DataProductFamily__c</fullName>
    <label>データ商品_大分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>短信有報</fullName>
            </value>
            <value>
                <fullName>業績予想</fullName>
            </value>
            <value>
                <fullName>四季報関連</fullName>
            </value>
            <value>
                <fullName>企業データ</fullName>
            </value>
            <value>
                <fullName>大株主・役員</fullName>
            </value>
            <value>
                <fullName>ＣＳＲ・ＥＳＧオンライン</fullName>
            </value>
            <value>
                <fullName>株価・株数</fullName>
            </value>
            <value>
                <fullName>地域流通データ</fullName>
            </value>
            <value>
                <fullName>就職四季報</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>ＤＣＬ・記事ロイヤリティ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>