force-app/main/default/objects/Project__c/fields/DataProductList__c.field-meta.xml
<CustomField>
    <fullName>DataProductList__c</fullName>
    <label>データ商品</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DataProductMiddleClass__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>企業データバンク（財務付き）</fullName>
            </value>
            <value>
                <fullName>決算サマリー情報</fullName>
            </value>
            <value>
                <fullName>財務データダイジェスト版</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>会社発表予想データ</fullName>
            </value>
            <value>
                <fullName>短信有報データ</fullName>
            </value>
            <value>
                <fullName>短信有報データ（ベンダ経由海外）</fullName>
            </value>
            <value>
                <fullName>業績予想データ</fullName>
            </value>
            <value>
                <fullName>業績予想データ（ベンダ経由海外）</fullName>
            </value>
            <value>
                <fullName>投資指標データ（予想１期のみ週次更新）</fullName>
            </value>
            <value>
                <fullName>投資指標データ（予想日次更新）</fullName>
            </value>
            <value>
                <fullName>会社プロフィール</fullName>
            </value>
            <value>
                <fullName>市場テーマ</fullName>
            </value>
            <value>
                <fullName>プロ500テーマ</fullName>
            </value>
            <value>
                <fullName>四季報銘柄レポート</fullName>
            </value>
            <value>
                <fullName>東経業種分類データ</fullName>
            </value>
            <value>
                <fullName>取引銀行・幹事証券データ</fullName>
            </value>
            <value>
                <fullName>会社四季報URLデータ</fullName>
            </value>
            <value>
                <fullName>減価償却費・設備投資額・研究開発費データ</fullName>
            </value>
            <value>
                <fullName>四季報ＤＶＤ</fullName>
            </value>
            <value>
                <fullName>事業構成データ</fullName>
            </value>
            <value>
                <fullName>株主優待データ</fullName>
            </value>
            <value>
                <fullName>四季報記事</fullName>
            </value>
            <value>
                <fullName>四季報速報</fullName>
            </value>
            <value>
                <fullName>四季報特色</fullName>
            </value>
            <value>
                <fullName>会社四季報PDF版</fullName>
            </value>
            <value>
                <fullName>会社四季報誌面データ</fullName>
            </value>
            <value>
                <fullName>外資系企業CD-ROM</fullName>
            </value>
            <value>
                <fullName>外資系企業データWEB版</fullName>
            </value>
            <value>
                <fullName>外資系企業テキストデータ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>