force-app/main/default/objects/Project__c/fields/DataProductMiddleClass__c.field-meta.xml
<CustomField>
    <fullName>DataProductMiddleClass__c</fullName>
    <label>データ商品_中分類</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DataProductFamily__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>企業データバンク（財務付き）</fullName>
            </value>
            <value>
                <fullName>決算サマリー情報</fullName>
            </value>
            <value>
                <fullName>財務データダイジェスト版</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>会社発表予想データ</fullName>
            </value>
            <value>
                <fullName>短信有報データ</fullName>
            </value>
            <value>
                <fullName>短信有報データ（ベンダ経由海外）</fullName>
            </value>
            <value>
                <fullName>業績予想データ</fullName>
            </value>
            <value>
                <fullName>業績予想データ（ベンダ経由海外）</fullName>
            </value>
            <value>
                <fullName>投資指標データ（予想１期のみ週次更新）</fullName>
            </value>
            <value>
                <fullName>投資指標データ（予想日次更新）</fullName>
            </value>
            <value>
                <fullName>会社プロフィール・テーマ</fullName>
            </value>
            <value>
                <fullName>四季報銘柄レポート</fullName>
            </value>
            <value>
                <fullName>東経業種分類データ</fullName>
            </value>
            <value>
                <fullName>会社四季報データ</fullName>
            </value>
            <value>
                <fullName>株主優待データ</fullName>
            </value>
            <value>
                <fullName>四季報記事・特色・速報</fullName>
            </value>
            <value>
                <fullName>四季報誌面</fullName>
            </value>
            <value>
                <fullName>外資系企業データ</fullName>
            </value>
            <value>
                <fullName>会社概要データ</fullName>
            </value>
            <value>
                <fullName>会社基本情報</fullName>
            </value>
            <value>
                <fullName>企業データバンク（基本属性のみ）</fullName>
            </value>
            <value>
                <fullName>未上場企業データ</fullName>
            </value>
            <value>
                <fullName>海外進出企業データ</fullName>
            </value>
            <value>
                <fullName>関係会社データ</fullName>
            </value>
            <value>
                <fullName>役員データ</fullName>
            </value>
            <value>
                <fullName>大株主データ</fullName>
            </value>
            <value>
                <fullName>ＣＳＲデータ</fullName>
            </value>
            <value>
                <fullName>ＥＳＧオンライン</fullName>
            </value>
            <value>
                <fullName>株価データ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>