force-app/main/default/objects/Project__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>日付</label>
    <type>Date</type>
</CustomField>