force-app/main/default/objects/Project__c/fields/FailureDateDB__c.field-meta.xml
<CustomField>
    <fullName>FailureDateDB__c</fullName>
    <label>不成立日</label>
    <type>Date</type>
</CustomField>