force-app/main/default/objects/Project__c/fields/FeatureName__c.field-meta.xml
<CustomField>
    <fullName>FeatureName__c</fullName>
    <label>特集名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>120周年</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>BCP</fullName>
            </value>
            <value>
                <fullName>BELS</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>MICE</fullName>
            </value>
            <value>
                <fullName>SIMロックフリー</fullName>
            </value>
            <value>
                <fullName>オフィス</fullName>
            </value>
            <value>
                <fullName>オフィス移転</fullName>
            </value>
            <value>
                <fullName>クラウド</fullName>
            </value>
            <value>
                <fullName>サービス付き高齢者住宅</fullName>
            </value>
            <value>
                <fullName>ストレスチェック制度</fullName>
            </value>
            <value>
                <fullName>ビジネストラベル</fullName>
            </value>
            <value>
                <fullName>ビッグデータ</fullName>
            </value>
            <value>
                <fullName>マイナンバー制度</fullName>
            </value>
            <value>
                <fullName>マンション建替</fullName>
            </value>
            <value>
                <fullName>ワークスタイル</fullName>
            </value>
            <value>
                <fullName>英語</fullName>
            </value>
            <value>
                <fullName>株主優待</fullName>
            </value>
            <value>
                <fullName>間接材コスト削減</fullName>
            </value>
            <value>
                <fullName>企業誘致</fullName>
            </value>
            <value>
                <fullName>採用支援</fullName>
            </value>
            <value>
                <fullName>資産運用</fullName>
            </value>
            <value>
                <fullName>事業承継</fullName>
            </value>
            <value>
                <fullName>住宅</fullName>
            </value>
            <value>
                <fullName>省エネ・節電</fullName>
            </value>
            <value>
                <fullName>情報セキュリティ</fullName>
            </value>
            <value>
                <fullName>睡眠</fullName>
            </value>
            <value>
                <fullName>相続</fullName>
            </value>
            <value>
                <fullName>防災</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>