force-app/main/default/objects/Project__c/fields/Is_Check__c.field-meta.xml
<CustomField>
    <fullName>Is_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>情報を確認した場合はチェックして下さい。（管理職用）</inlineHelpText>
    <label>チェック済み</label>
    <type>Checkbox</type>
</CustomField>