force-app/main/default/objects/Project__c/fields/KeiyakuEnd_ymd__c.field-meta.xml
<CustomField>
    <fullName>KeiyakuEnd_ymd__c</fullName>
    <label>契約終了日</label>
    <type>Date</type>
</CustomField>