force-app/main/default/objects/Project__c/fields/KeiyakuStart_ymd__c.field-meta.xml
<CustomField>
    <fullName>KeiyakuStart_ymd__c</fullName>
    <label>契約開始日</label>
    <type>Date</type>
</CustomField>