force-app/main/default/objects/Project__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>媒体</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>週刊東洋経済</fullName>
            </value>
            <value>
                <fullName>東洋経済オンライン</fullName>
            </value>
            <value>
                <fullName>セミナー</fullName>
            </value>
            <value>
                <fullName>会社四季報</fullName>
            </value>
            <value>
                <fullName>会社四季報ワイド版</fullName>
            </value>
            <value>
                <fullName>会社四季報プロ500</fullName>
            </value>
            <value>
                <fullName>会社四季報先取り</fullName>
            </value>
            <value>
                <fullName>会社四季報未上場版</fullName>
            </value>
            <value>
                <fullName>名古屋臨時増刊号</fullName>
            </value>
            <value>
                <fullName>生保・損保臨時増刊号</fullName>
            </value>
            <value>
                <fullName>大学臨時増刊号</fullName>
            </value>
            <value>
                <fullName>就職四季報シリーズ</fullName>
            </value>
            <value>
                <fullName>ハレタル</fullName>
            </value>
            <value>
                <fullName>Think</fullName>
            </value>
            <value>
                <fullName>一橋ビジネスレビュー</fullName>
            </value>
            <value>
                <fullName>カスタム出版</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>