force-app/main/default/objects/Project__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <label>案件</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>純広告</fullName>
            </value>
            <value>
                <fullName>タイアップ</fullName>
            </value>
            <value>
                <fullName>アスペクト</fullName>
            </value>
            <value>
                <fullName>広告特集</fullName>
            </value>
            <value>
                <fullName>ブランドコンテンツ</fullName>
            </value>
            <value>
                <fullName>メールマガジン</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>