force-app/main/default/objects/Project__c/fields/ProposedAmount__c.field-meta.xml
<CustomField>
    <fullName>ProposedAmount__c</fullName>
    <label>提案金額（万円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>