force-app/main/default/objects/Project__c/fields/RateOfAmount_DB__c.field-meta.xml
<CustomField>
    <fullName>RateOfAmount_DB__c</fullName>
    <formula>CASE( Accuracy__c , 
&quot;A&quot;, 1, 
&quot;B&quot;, 0.7 , 
&quot;C&quot;, 0.5, 
&quot;D&quot;, 0.3, 
&quot;E&quot;, 0, 
0)</formula>
    <label>割合（％）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>