force-app/main/default/objects/Project__c/fields/SalesType__c.field-meta.xml
<CustomField>
    <fullName>SalesType__c</fullName>
    <label>販売種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>定期</fullName>
            </value>
            <value>
                <fullName>定期・新規</fullName>
            </value>
            <value>
                <fullName>定期・既存</fullName>
            </value>
            <value>
                <fullName>スポット</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>