force-app/main/default/objects/Project__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>成約</fullName>
            </value>
            <value>
                <fullName>検討中</fullName>
            </value>
            <value>
                <fullName>否決</fullName>
            </value>
            <value>
                <fullName>提案済</fullName>
            </value>
            <value>
                <fullName>成約・解約</fullName>
            </value>
            <value>
                <fullName>提案中</fullName>
            </value>
            <value>
                <fullName>解約回避中</fullName>
            </value>
            <value>
                <fullName>不成立</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>