force-app/main/default/objects/Project__c/fields/TargetValue__c.field-meta.xml
<CustomField>
    <fullName>TargetValue__c</fullName>
    <label>目標値(万円)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>