force-app/main/default/objects/Project__c/fields/ZyutyuMikomi_ymd__c.field-meta.xml
<CustomField>
    <fullName>ZyutyuMikomi_ymd__c</fullName>
    <label>受注見込日</label>
    <type>Date</type>
</CustomField>