force-app/main/default/objects/Project__c/recordTypes/AdSalesRecordType.recordType-meta.xml
<RecordType>
    <fullName>AdSalesRecordType</fullName>
    <active>true</active>
    <label>広告営業用レコードタイプ</label>
</RecordType>