force-app/main/default/objects/Project__c/recordTypes/DBSalesRecordType.recordType-meta.xml
<RecordType>
    <fullName>DBSalesRecordType</fullName>
    <active>true</active>
    <label>DB営業用レコードタイプ</label>
</RecordType>