force-app/main/default/objects/Project__c/recordTypes/DBSalesTargetRecordType.recordType-meta.xml
<RecordType>
    <fullName>DBSalesTargetRecordType</fullName>
    <active>true</active>
    <label>DB営業用目標レコードタイプ</label>
</RecordType>