force-app/main/default/objects/Project__c/listViews/AllProjectListAd.listView-meta.xml
<ListView>
    <fullName>AllProjectListAd</fullName>
    <columns>NAME</columns>
    <columns>Is_Check__c</columns>
    <columns>Date__c</columns>
    <columns>AgentAccount__c</columns>
    <columns>Account__c</columns>
    <columns>Media__c</columns>
    <columns>ProjectType__c</columns>
    <columns>State__c</columns>
    <columns>ProposedAmount__c</columns>
    <columns>Accuracy__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.AdSalesRecordType</value>
    </filters>
    <label>すべて選択(広告用)</label>
    <sharedTo>
        <role>BusinessPromotionDeptRole</role>
    </sharedTo>
</ListView>