force-app/main/default/objects/Project__c/listViews/AllProjectListDB.listView-meta.xml
<ListView>
    <fullName>AllProjectListDB</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>AccountNameDB__c</columns>
    <columns>ContactNameDB__c</columns>
    <columns>DataProductList__c</columns>
    <columns>ProposedAmount__c</columns>
    <columns>State__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.DBSalesRecordType</value>
    </filters>
    <label>すべて選択(DB営業)</label>
    <sharedTo>
        <role>DataBaseDeptRole</role>
    </sharedTo>
</ListView>