force-app/main/default/objects/Project__c/listViews/TargetValue_DBSales.listView-meta.xml
<ListView>
    <fullName>TargetValue_DBSales</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>SalesType__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>TargetValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.DBSalesTargetRecordType</value>
    </filters>
    <label>目標(DB営業)</label>
    <sharedTo>
        <role>DataBaseDeptRole</role>
    </sharedTo>
</ListView>